Added the tables in the webpage
Tried really hard to make it so when you  click the button in the group table row it will generate and show the table with the test takers from the same group as in the button; couldn't do it because it doesnt recognize the class that I assign to the button during  table creation, jquery selectors dont work no matter how i tried

--- a/Webpage/examSchedule.html
+++ b/Webpage/examSchedule.html
@@ -11,6 +11,7 @@
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"></script>
 	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"></script>
+
 </head>
 
 <body>
@@ -19,60 +20,14 @@
 		<h1 id="headerSchedule">Exam Schedule</h1>
 	</nav>
 
-	<table>
-		<tr>
-			<th>Name</th>
-			<th>Date</th>
-			<th>Course</th>
-			<th>Type</th>
-			<th>Classroom</th>
-			<th>Group</th>
-			<th>Examiner</th>
-			<th>Co-Examiner</th>
-		</tr>
-		<tr>
-			<td>Exam 1</td>
-			<td>01/12/2019</td>
-			<td>SDJ1</td>
-			<td>Written</th>
-			<td>213B</th>
-			<td>1Z</th>
-			<td>Michael</th>
-			<td>Astrid</td>
-		</tr>
-		<tr>
-			<td>Exam 1</td>
-			<td>01/12/2019</td>
-			<td>SDJ1</td>
-			<td>Written</th>
-			<td>213B</th>
-			<td>1Z</th>
-			<td>Michael</th>
-			<td>Astrid</td>
-		</tr>
-		<tr>
-			<td>Exam 1</td>
-			<td>01/12/2019</td>
-			<td>SDJ1</td>
-			<td>Written</th>
-			<td>213B</th>
-			<td>1Z</th>
-			<td>Michael</th>
-			<td>Astrid</td>
-		</tr>
-		<tr>
-			<td>Exam 1</td>
-			<td>01/12/2019</td>
-			<td>SDJ1</td>
-			<td>Written</th>
-			<td>213B</th>
-			<td>1Z</th>
-			<td>Michael</th>
-			<td>Astrid</td>
-		</tr>
-
+	<table id = "schedule">
 	</table>
-	</div>
+    
+    <table id = "studentList">
+    </table>
+    
+    <script src="js/jquery-3.4.1.js"></script>
+    <script src="js/script.js"></script>
 </body>
 
 </html>
